feat:stock function
